tests/cases/scc/error/0024-lvale-cast.c.res
./tests/cases/scc/error/0024-lvale-cast.c:8:11:	error:   cannot modify an rvalue.
exit code 1
